--- a/main.html
+++ b/main.html
@@ -1,16 +1,95 @@
+
 <!DOCTYPE html>
-
-<html>
-
+<html lang="en">
 <head>
-	<link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Welcome to Accio Jobs</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 0;
+      background-color: #f4f6f8;
+      color: #333;
+    }
+
+    header {
+      background-color: #0056d2;
+      color: #fff;
+      padding: 2rem 1rem;
+      text-align: center;
+    }
+
+    header h1 {
+      margin: 0;
+      font-size: 2.5rem;
+    }
+
+    main {
+      max-width: 900px;
+      margin: 2rem auto;
+      padding: 1rem;
+    }
+
+    section {
+      background: #fff;
+      margin-bottom: 1.5rem;
+      padding: 1.5rem;
+      border-radius: 10px;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+    }
+
+    section h2 {
+      margin-top: 0;
+      color: #0056d2;
+    }
+
+    footer {
+      text-align: center;
+      background: #222;
+      color: #fff;
+      padding: 1rem;
+      margin-top: 2rem;
+    }
+
+    @media (max-width: 600px) {
+      header h1 {
+        font-size: 2rem;
+      }
+      section {
+        padding: 1rem;
+      }
+    }
+  </style>
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+  <header>
+    <h1>Welcome to Accio Jobs!</h1>
+  </header>
 
+  <main>
+    <section>
+      <h2>About Us</h2>
+      <p>
+        Accio Jobs is a career-focused learning platform that helps students
+        learn web development, complete real-world assignments, and prepare
+        for top tech jobs.
+      </p>
+    </section>
+
+    <section>
+      <h2>Why Choose Us?</h2>
+      <p>
+        With structured courses, hands-on practice, and placement support,
+        Accio Jobs ensures learners get placed in top companies with
+        competitive packages.
+      </p>
+    </section>
+  </main>
+
+  <footer>
+    <p>&copy; 2025 Accio Jobs. All rights reserved.</p>
+  </footer>
 </body>
-
 </html>
